--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -30,4 +30,10 @@
   }
 }
 
+@mixin mobile {
+  @media screen and (max-width: 30em) {
+    @content;
+  }
+}
+
 
