--- a/sass/components/_chart.scss
+++ b/sass/components/_chart.scss
@@ -2,6 +2,11 @@
   width: 60rem;
   padding: 0 2rem;
 
+  @include mobile {
+    width: 50rem;
+  }
+ 
+
   &__row {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -22,6 +27,10 @@
     font-size: 1.6rem;
     font-weight: bold;
     padding: .5rem 2rem;
+
+    @include mobile {
+      font-size: 1.4rem;
+    }
   }
 
   &__fill {
